# OpenSource

./: README.md
exam/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main_for_so  main_from_src
exam/lib_build/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
exam2/: CMakeCache.txt  CMakeLists.txt  Makefile  ST  cmake_install.cmake  main_for_a  mmain.c
exam2/lib_build/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
opensrc-2022/: README.md  lshead.bash  menu.bash  power.bash
opensrc-2022/makestudy/: README.md  copy.c  main2.c
